# BG_UI

./: CMakeLists.txt  README.md
components/BG_List/: bg_list.c  bg_list.h
components/base_func/: gui_tool.c  gui_tool.h
components/page/: bg_page.c  bg_page.h  page_manager.c  page_manager.h
emulator/: lcd.c  lcd.h
keyinput/: input_handle.c
src/: main.c
test/: a.out  bg_page.h  list  list.c  test  test.c
